[project]
name = "pp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "groq>=0.20.0",
    "langchain-community>=0.3.20",
    "openai>=1.69.0",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
    "typer>=0.15.2",
]
